--- a/pages/musicos.html
+++ b/pages/musicos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Músicos de Blues Contemporáneos</title>
-    <link rel="stylesheet" href="../css/musicos.css"> <!-- Enlace a tu archivo de estilos CSS -->
+    <link rel="icon" href="/media/icono.jpg">
+    <link rel="stylesheet" href="../css/musicos.css">
 </head>
 <body>
 
@@ -22,44 +23,40 @@
 <main>
     <h2 class="h-2">Musicos del momento</h2>
     <section id="musicos">
-<!--         <h2>Músicos Destacados</h2> -->
-        <!-- Aquí puedes listar información sobre los músicos de blues contemporáneos -->
         <div class="musico" style="background-image: url(../media/johnmayer.jpg);">
             <div class="textos">
             <h3>John mayer</h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Virtuoso en la guitarra, Mayer fusiona blues, rock y pop, revolucionando la música actual.</p>
             </div>
         </div>
-        <div class="musico" style="background-image: url(../media/joe.jpg)">
-            
+        <div class="musico" style="background-image: url(../media/joe.jpg);">
             <div class="textos">
             <h3>Joe bonamassa</h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Experto en el blues, Bonamassa fusiona talento y pasión, renovando el escenario musica.</p>
             </div>
         </div>
         <div class="musico" style="background-image: url(../media/ericgales.jpg)">
-            
             <div class="textos">
             <h3>Eric gales</h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Eric Gales, prodigio de la guitarra, entrelaza blues, rock y funk, desafiando los límites musicales.</p>
             </div>
         </div>
         <div class="musico" style="background-image: url(../media/tedeschitrucks.jpg)">
             <div class="textos">
             <h3>Tedeschi Trucks band </h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Derek Trucks y Susan Tedeschi, pareja musical que fusiona blues, rock y soul con maestría y pasión, creando una experiencia musical única y cautivadora.</p>
             </div>
         </div>
         <div class="musico" style="background-image: url(../media/theMarcusKingBand.jpg)">
             <div class="textos">
             <h3>Marcus king</h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Joven prodigio del blues y el soul, su voz y guitarra encarnan la pasión y la autenticidad de la música del sur, llevando su legado a nuevas alturas.</p> 
             </div>
         </div>
         <div class="musico" style="background-image: url(../media/philipsayce.jpeg)">
             <div class="textos">
             <h3>Philip Sayce</h3>
-            <p>Descripción del músico y su contribución al blues contemporáneo.</p>
+            <p>Virtuoso de la guitarra, fusiona blues, rock y soul con una pasión ardiente, llevando la música a nuevas fronteras con su estilo inconfundible y su habilidad técnica impresionante.</p>
             </div>
         </div>
     </section>
