--- a/pages/albumes.html
+++ b/pages/albumes.html
@@ -26,16 +26,16 @@
     <div class="container">
         <div class="card">
             <figure>
-                <img src="../media/johnmayer.jpg" >
+                <img src="../media/johnmayer.jpg" alt="" >
             </figure>
             <div class="contenido">
-                <h3>JOHN MAYER</h3>
+                <h3>JONH MAYER</h3>
                 <p><a href="john.html">Ver álbumes</a></p>
             </div>
         </div> 
         <div class="card">
             <figure>
-                <img src="../media/ericgales.jpg" >
+                <img src="../media/ericgales.jpg" alt="">
             </figure>
             <div class="contenido">
                 <h3>ERIC <br> GALES</h3>
@@ -44,7 +44,7 @@
         </div> 
         <div class="card">
             <figure>
-                <img src="../media/joe.jpg" >
+                <img src="../media/joe.jpg" alt="" >
             </figure>
             <div class="contenido">
                 <h3>JOE BONAMASSA</h3>
@@ -53,7 +53,7 @@
         </div> 
         <div class="card">
             <figure>
-                <img src="../media/theMarcusKingBand.jpg" >
+                <img src="../media/theMarcusKingBand.jpg" alt="" >
             </figure>
             <div class="contenido">
                 <h3>MARCUS KING</h3>
@@ -62,16 +62,16 @@
         </div> 
         <div class="card">
             <figure>
-                <img src="../media/tedeschitrucks.jpg" >
+                <img src="../media/tedeschitrucks.jpg" alt="">
             </figure>
             <div class="contenido">
-                <h3>TEDESCHI TRUCKS </h3>
+                <h3>TESESCHI TRUCKS </h3>
                 <p><a href="tedeschi.html">Ver álbumes</a></p>
             </div>
         </div> 
         <div class="card">
             <figure>
-                <img src="../media/philipsayce.jpeg" >
+                <img src="../media/philipsayce.jpeg" alt="">
             </figure>
             <div class="contenido">
                 <h3>PHILIP SAYCE</h3>
@@ -81,11 +81,11 @@
 
     </div>
 
-    <div class="footer">
+
+    <div class="footer" >
         <footer>
             <p>Derechos de autor © 2024 - Blog de Músicos de Blues Contemporáneos</p>
         </footer>
-    
-
+    </div>
 </body>
 </html>
